crates/meilisearch/tests/dynamic_search_rules/snapshots/mod.rs/patch_unknown_field/1.snap
---
source: crates/meilisearch/tests/dynamic_search_rules/mod.rs
---
{
  "message": "Unknown field `bogusField`: expected one of `description`, `precedence`, `active`, `conditions`, `actions`",
  "code": "bad_request",
  "type": "invalid_request",
  "link": "https://docs.meilisearch.com/errors#bad_request"
}
