crates/meilisearch/tests/dynamic_search_rules/snapshots/mod.rs/patch_unknown_field/unknown_field_error_msg.snap
---
source: crates/meilisearch/tests/dynamic_search_rules/mod.rs
---
{
  "message": "Json deserialize error: unknown field `bogusField`, expected one of `description`, `priority`, `active`, `conditions`, `actions` at line 1 column 13",
  "code": "bad_request",
  "type": "invalid_request",
  "link": "https://docs.meilisearch.com/errors#bad_request"
}
